# rhack

./: .env  .gitattributes  .gitignore  .sops.yaml  Cargo.toml  Dockerfile  cloudbuild.yaml  decrypt.sh  encrypt.sh  misc-snippets.txt  sops-example.txt  usefull-tidbits.txt
db/migrations/: 20220714_create_person_table.sql
secrets/dev/: secret-file.enc.json
src/: logger.rs  main.rs  routes.rs
src/asyncr/: mod.rs
src/controllers/: person_controller.rs
src/data/: mod.rs  person.rs  token.rs
src/db/: db.rs
src/redis_datastore/: mod.rs
