[package]
name = "rhackaws"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.11.0"
aws-sdk-dynamodb = "0.11.0"
tokio = { version = "1", features = ["full"] }
actix-web = "4.1.0"
redis = { version = "0.21.5", features = ["tokio-comp"] }
