[package]
name = "rhack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.11.0"
aws-sdk-dynamodb = "0.11.0"
tokio = { version = "1", features = ["full"] }
actix-web = "4.1.0"
thiserror = "1.0.31"
redis = { version = "0.21.5", features = ["tokio-comp","aio","connection-manager"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
rand = "0.8.5"
ulid = "0.6.0"
